@@ -322,10 +322,10 @@ class Dataset(object):
         import hxl.filters
         return hxl.filters.RenameFilter(self, specs)
 
-    def clean_data(self, whitespace=[], upper=[], lower=[], date=[], number=[], queries=[]):
+    def clean_data(self, whitespace=[], upper=[], lower=[], date=[], date_format='%Y-%m-%d', number=[], queries=[]):
         """Clean data fields."""
         import hxl.filters
-        return hxl.filters.CleanDataFilter(self, whitespace=whitespace, upper=upper, lower=lower, date=date, number=number, queries=queries)
+        return hxl.filters.CleanDataFilter(self, whitespace=whitespace, upper=upper, lower=lower, date=date, date_format=date_format, number=number, queries=queries)
 
     def merge_data(self, merge_source, keys, tags, replace=False, overwrite=False, queries=[]):
         """Merges values from a second dataset."""
