@@ -8,6 +8,7 @@
 	- fix output bug in command-line scripts
 	- fixed bug in merge filter
 	- added new "is (not)" operator for row queries
+	- added optional date_format parameter for clean data filter
 
 2016-12-02 Release 4.0
 	- Fully modularised JSON specs and recipes.
